# swift-api-rest-rs-warp

./: .dockerignore  .gitignore  Cargo.toml  README.md  configure.sh  coverage.sh  lint.sh  watch.sh
.github/workflows/: rust.yml
docker/: Dockerfile  docker-compose.yml
docs/: setup-macos.md  setup-podman-macos.md
migrations/2024-07-26-210902_create_books/: down.sql  up.sql
scripts/: podman-delete.sh  podman.sh
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs  tests.rs
