[package]
name = "swift-api-rest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.37"
utoipa = { version = "4.2.3", features = ["chrono"] }
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4.4"
